# OMsway

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  environment.yml  pyproject.toml  pyrightconfig.json
art/: README.md  sway_animation.py
docs/: DESIGN.md
km3disp/: __init__.py  currents.py  displace.py  geometry.py  io.py  mechanics.py  parameters.py  study.py  validate.py  viz.py
omsway/: __init__.py  currents.py  geometry.py  mechanics.py  torsion.py  viz.py
resources/geometries/: arca.geo
scripts/: make_realizations.py  make_uniform_sweep.py  run_study.py  study.py  validate.py
tests/: test_currents.py  test_displace.py  test_mechanics.py  test_parameters.py  test_study.py  test_viz.py
