[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "km3disp"
version = "0.1.0"
description = "Displacement of KM3NeT optical modules under sea currents"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "pyarrow"]

[project.optional-dependencies]
plot = ["matplotlib", "plotly"]

[tool.setuptools]
packages = ["km3disp"]
