[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omsway"
version = "0.1.0"
description = "Sway of moored optical-module lines in neutrino telescopes under sea currents"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "pyarrow"]

[project.optional-dependencies]
plot = ["matplotlib", "plotly"]

[tool.setuptools]
packages = ["omsway"]
